--- a/cv-project/package.json
+++ b/cv-project/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cv-project",
     "version": "0.1.0",
-    "homepage": "https://vladius9512.github.io/CV-application",
+    "homepage": "https://vladius9512.github.io/CV-Application",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
