--- a/cv-project/package.json
+++ b/cv-project/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cv-project",
     "version": "0.1.0",
-    "homepage": "https://vladius9512.github.io/CV-Application/",
+    "homepage": "https://github.com/vladius9512/CV-Application/tree/main/cv-project",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
